tests/typing/bad/testfile-redef-2.c
#include <stdbool.h>
#include <stdlib.h>
#include <stdio.h>

void f() {}
void f() {}
int main() {}
